# bioacoustic-detection

./: .gitignore  .gitmodules  LICENSE  README.md  requirements.txt  setup.cfg  setup.py  setup.sh
.github/workflows/: python-package.yml
data/: example_model.config  splits.json
notebooks/: Automatic_Decimation.ipynb  Detection Inference.ipynb  Evaluating_Downsampled_Spectrograms.ipynb  Final_TFLITE_model.ipynb  Fix Annotation Formatting.ipynb  Merging_Annotations.ipynb  SpectrogramDatasetGenerator.ipynb  Visualize Annotations.ipynb
scripts/: clean_annotations.py  generate_spectrogram_dataset.py
src/bioacoustic_detection/: spectrogram_dataset_generator.py
src/bioacoustic_detection/utils/: annot.py  annot_utils.py  io.py  io_utils.py  vis.py  wav.py
tests/: helpers.py  test_annot_utils.py
tests/test_data/: 671658014.180928153609-test.txt  all_good_annotations.txt  all_good_annotations_mispelled.txt  all_good_annotations_small.txt  all_good_annotations_small2.txt  all_good_annotations_valid.txt  mixed_annotations_mispelled.txt  mixed_annotations_mispelled_invalid.txt  mixed_annotations_mispelled_valid.txt
tests/utils/: test_annot_utils.py
